--- a/index.html
+++ b/index.html
@@ -42,10 +42,47 @@
         .partially-available {
             background-color: #ffeeba;
         }
+        .controls {
+            margin-bottom: 20px;
+        }
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
+        .modal-content {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        .modal-content input {
+            margin-right: 10px;
+        }
     </style>
 </head>
 <body>
     <h1>Group Availability Scheduler</h1>
+    <div class="controls">
+        <select id="userSelect">
+            <option value="">Select User</option>
+        </select>
+        <button id="addUserButton">Add New User</button>
+    </div>
+    <div id="addUserModal" class="modal">
+        <div class="modal-content">
+            <h2>Add New User</h2>
+            <input type="text" id="newUserName" placeholder="Enter user name">
+            <button id="saveUserButton">Save</button>
+            <button id="cancelUserButton">Cancel</button>
+        </div>
+    </div>
     <div class="scheduler">
         <!-- Headers -->
         <div class="header">Time</div>
@@ -67,6 +104,17 @@
             }
             timeSlots.push("22:00"); // Last slot 10 PM
 
+            const userSelect = document.getElementById("userSelect");
+            const addUserButton = document.getElementById("addUserButton");
+            const addUserModal = document.getElementById("addUserModal");
+            const newUserNameInput = document.getElementById("newUserName");
+            const saveUserButton = document.getElementById("saveUserButton");
+            const cancelUserButton = document.getElementById("cancelUserButton");
+
+            let users = JSON.parse(localStorage.getItem('users')) || [];
+            let scheduleData = JSON.parse(localStorage.getItem('scheduleData')) || {};
+            let currentUser = "";
+
             function createCell(content, cssClass = "") {
                 const cell = document.createElement("div");
                 cell.textContent = content;
@@ -76,56 +124,85 @@
                 return cell;
             }
 
-            const scheduler = document.querySelector(".scheduler");
-            let scheduleData = {};
-
             function renderScheduler() {
+                scheduler.innerHTML = '';
+                scheduler.appendChild(createCell("Time", "header"));
+                days.forEach(day => scheduler.appendChild(createCell(day, "header")));
+                
                 timeSlots.forEach(time => {
                     scheduler.appendChild(createCell(time, "header"));
                     days.forEach(day => {
-                        const cell = createCell("", scheduleData[`${day}-${time}`] === "available" ? "available" : "unavailable");
+                        const availabilityKey = `${currentUser}-${day}-${time}`;
+                        const cell = createCell("", scheduleData[availabilityKey] === "available" ? "available" : "unavailable");
                         cell.addEventListener("click", () => {
-                            if (cell.classList.contains("available")) {
-                                cell.classList.remove("available");
-                                cell.classList.add("unavailable");
-                                scheduleData[`${day}-${time}`] = "unavailable";
+                            if (currentUser) {
+                                if (cell.classList.contains("available")) {
+                                    cell.classList.remove("available");
+                                    cell.classList.add("unavailable");
+                                    scheduleData[availabilityKey] = "unavailable";
+                                } else {
+                                    cell.classList.remove("unavailable");
+                                    cell.classList.add("available");
+                                    scheduleData[availabilityKey] = "available";
+                                }
+                                saveSchedule();
                             } else {
-                                cell.classList.remove("unavailable");
-                                cell.classList.add("available");
-                                scheduleData[`${day}-${time}`] = "available";
+                                alert("Please select a user to edit their schedule.");
                             }
-                            saveSchedule();
                         });
                         scheduler.appendChild(cell);
                     });
                 });
             }
 
-            function loadSchedule() {
-                fetch('load-schedule.php')
-                    .then(response => response.json())
-                    .then(data => {
-                        scheduleData = data;
-                        renderScheduler();
-                    })
-                    .catch(error => console.error('Error loading schedule:', error));
-            }
-
             function saveSchedule() {
-                fetch('save-schedule.php', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify(scheduleData)
-                }).then(response => {
-                    if (!response.ok) {
-                        throw new Error('Failed to save schedule');
-                    }
-                }).catch(error => console.error('Error saving schedule:', error));
+                localStorage.setItem('scheduleData', JSON.stringify(scheduleData));
             }
 
-            loadSchedule();
+            function renderUserSelect() {
+                userSelect.innerHTML = '<option value="">Select User</option>';
+                users.forEach(user => {
+                    const option = document.createElement("option");
+                    option.value = user;
+                    option.textContent = user;
+                    userSelect.appendChild(option);
+                });
+            }
+
+            function saveUsers() {
+                localStorage.setItem('users', JSON.stringify(users));
+            }
+
+            userSelect.addEventListener("change", () => {
+                currentUser = userSelect.value;
+                renderScheduler();
+            });
+
+            addUserButton.addEventListener("click", () => {
+                addUserModal.style.display = "flex";
+            });
+
+            saveUserButton.addEventListener("click", () => {
+                const newUserName = newUserNameInput.value.trim();
+                if (newUserName && !users.includes(newUserName)) {
+                    users.push(newUserName);
+                    saveUsers();
+                    renderUserSelect();
+                    newUserNameInput.value = "";
+                    addUserModal.style.display = "none";
+                } else {
+                    alert("Invalid or duplicate user name.");
+                }
+            });
+
+            cancelUserButton.addEventListener("click", () => {
+                newUserNameInput.value = "";
+                addUserModal.style.display = "none";
+            });
+
+            // Initial Render
+            renderUserSelect();
+            renderScheduler();
         </script>
     </div>
 </body>
