--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Group Availability Scheduler</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="p-8">
     <h1>Group Availability Scheduler</h1>
     <div class="flex items-center space-x-4 mb-4">
-        <label class="text-lg font-semibold">Other Users:</label>
+        <label class="text-lg font-semibold p-2">Other Users:</label>
         <div id="userCheckboxes" class="flex flex-wrap space-x-4"></div>
     </div>
     <div class="flex items-center space-x-4 mb-4">
@@ -65,6 +65,7 @@
                 const cell = document.createElement("div");
                 const textElement = document.createElement("span");
                 textElement.textContent = content;
+                textElement.classList.add("p-1");
                 textElement.classList.add("truncate");
                 textElement.style.display = "block";
                 textElement.style.overflow = "hidden";
@@ -102,13 +103,8 @@
                         cell.style.whiteSpace = "nowrap";
                         cell.classList.add("truncate", "flex", "items-center", "justify-center");
                         
-                        cell.style.whiteSpace = "nowrap";
-                        cell.style.textOverflow = "ellipsis";
-                        cell.classList.add("truncate");
                         if (unavailableUsers.length > 0) {
-                            if (unavailableUsers.length > 0) {
                             cell.title = unavailableUsers.join(', ');
-                        }
                         }
                         cell.addEventListener("click", () => {
                             if (currentUser) {
@@ -116,18 +112,30 @@
                                     cell.classList.remove("bg-green-200");
                                     cell.classList.add("bg-red-200");
                                     scheduleData[availabilityKey] = "unavailable";
+                                    saveSchedule();
                                 } else {
                                     cell.classList.remove("bg-red-200");
                                     cell.classList.add("bg-green-200");
                                     scheduleData[availabilityKey] = "available";
+                                    saveSchedule();
                                 }
-                                saveSchedule();
                             } else {
                                 alert("Please select a user to edit their schedule.");
                             }
                         });
                         scheduler.appendChild(cell);
                     });
+                });
+            }
+
+            function updateOtherUsersAvailability(day, time) {
+                [...activeUsers].forEach(user => {
+                    if (user !== currentUser) {
+                        const key = `${user}-${day}-${time}`;
+                        if (!scheduleData[key]) {
+                            scheduleData[key] = "unavailable";
+                        }
+                    }
                 });
             }
 
@@ -173,8 +181,7 @@
                     checkboxWrapper.appendChild(checkbox);
                     checkboxWrapper.appendChild(label);
                     userCheckboxes.appendChild(checkboxWrapper);
-                    }
-                );
+                });
             }
 
             function saveUsers() {
